# Clever-Fox

./: README.md  pyproject.toml  requirements.txt  server.py
src/: main.py
