[project]
name = "clever-fox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.5.0",
    "openai>=1.102.0",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
